[gd_scene load_steps=22 format=3 uid="uid://c2r0f5y54tijx"]

[ext_resource type="Script" path="res://num_butt_parent.gd" id="2_4y2tc"]
[ext_resource type="Script" path="res://numButt.gd" id="2_62hmi"]
[ext_resource type="Script" path="res://go_butt.gd" id="3_w3pql"]
[ext_resource type="Texture2D" uid="uid://bii4hqw8ehwb8" path="res://numberBlocks/1 block.png" id="4_0ie3u"]
[ext_resource type="Script" path="res://goal.gd" id="4_jv0bc"]
[ext_resource type="AudioStream" uid="uid://8trv8auqdw5b" path="res://SoundEffects/pressed.mp3" id="4_py7tg"]
[ext_resource type="Script" path="res://lose.gd" id="5_bxijw"]
[ext_resource type="Script" path="res://lose_timer.gd" id="5_mtj0i"]
[ext_resource type="Texture2D" uid="uid://dts0eq81twojr" path="res://images/white.png" id="11_b58hh"]
[ext_resource type="Texture2D" uid="uid://dv1h6txltnv3a" path="res://images/high score trophy - Copy.png" id="11_t2wo6"]
[ext_resource type="Texture2D" uid="uid://i2afq6lo6oe8" path="res://images/oops - Copy.png" id="12_fwlvl"]
[ext_resource type="AudioStream" uid="uid://ejka0ei4nfp1" path="res://SoundEffects/fail.mp3" id="13_pri83"]
[ext_resource type="AudioStream" uid="uid://bx6lh2a5vkdo5" path="res://SoundEffects/victory.mp3" id="14_oeqo5"]
[ext_resource type="Texture2D" uid="uid://bl5lr6gtrr12m" path="res://images/equals - Copy.png" id="15_jqgni"]
[ext_resource type="Texture2D" uid="uid://d5eq365atcp0" path="res://images/current score.png" id="19_mg28s"]
[ext_resource type="FontFile" uid="uid://dhul2m0qaeg1o" path="res://font/Handlee-Regular.ttf" id="20_4o664"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4xjq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6s5vl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6edcu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsfv2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2x11x"]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.188235, 0.160784, 0.294118, 1)
z_index = -1
offset_right = 1080.0
offset_bottom = 1920.0

[node name="numButtParent" type="Node" parent="."]
script = ExtResource("2_4y2tc")

[node name="Button1" type="Button" parent="numButtParent"]
offset_left = 40.0
offset_top = 182.0
offset_right = 260.0
offset_bottom = 402.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button1"]
stream = ExtResource("4_py7tg")

[node name="Button2" type="Button" parent="numButtParent"]
offset_left = 295.0
offset_top = 182.0
offset_right = 515.0
offset_bottom = 402.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button2"]
position = Vector2(-255, 0)
stream = ExtResource("4_py7tg")

[node name="Button3" type="Button" parent="numButtParent"]
offset_left = 550.0
offset_top = 182.0
offset_right = 770.0
offset_bottom = 402.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button3"]
position = Vector2(-510, 0)
stream = ExtResource("4_py7tg")

[node name="Button4" type="Button" parent="numButtParent"]
offset_left = 810.0
offset_top = 182.0
offset_right = 1030.0
offset_bottom = 402.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button4"]
position = Vector2(-770, 0)
stream = ExtResource("4_py7tg")

[node name="Button5" type="Button" parent="numButtParent"]
offset_left = 40.0
offset_top = 432.0
offset_right = 260.0
offset_bottom = 652.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button5"]
position = Vector2(0, -250)
stream = ExtResource("4_py7tg")

[node name="Button6" type="Button" parent="numButtParent"]
offset_left = 295.0
offset_top = 432.0
offset_right = 515.0
offset_bottom = 652.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button6"]
position = Vector2(-255, -250)
stream = ExtResource("4_py7tg")

[node name="Button7" type="Button" parent="numButtParent"]
offset_left = 550.0
offset_top = 432.0
offset_right = 770.0
offset_bottom = 652.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button7"]
position = Vector2(-510, -250)
stream = ExtResource("4_py7tg")

[node name="Button8" type="Button" parent="numButtParent"]
offset_left = 810.0
offset_top = 432.0
offset_right = 1030.0
offset_bottom = 652.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button8"]
position = Vector2(-770, -250)
stream = ExtResource("4_py7tg")

[node name="Button9" type="Button" parent="numButtParent"]
offset_left = 40.0
offset_top = 682.0
offset_right = 260.0
offset_bottom = 902.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button9"]
position = Vector2(0, -500)
stream = ExtResource("4_py7tg")

[node name="Button10" type="Button" parent="numButtParent"]
offset_left = 295.0
offset_top = 682.0
offset_right = 515.0
offset_bottom = 902.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button10"]
position = Vector2(-255, -500)
stream = ExtResource("4_py7tg")

[node name="Button11" type="Button" parent="numButtParent"]
offset_left = 550.0
offset_top = 682.0
offset_right = 770.0
offset_bottom = 902.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button11"]
position = Vector2(-510, -500)
stream = ExtResource("4_py7tg")

[node name="Button12" type="Button" parent="numButtParent"]
offset_left = 810.0
offset_top = 682.0
offset_right = 1030.0
offset_bottom = 902.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button12"]
position = Vector2(-770, -500)
stream = ExtResource("4_py7tg")

[node name="Button13" type="Button" parent="numButtParent"]
offset_left = 40.0
offset_top = 932.0
offset_right = 260.0
offset_bottom = 1152.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button13"]
position = Vector2(0, -750)
stream = ExtResource("4_py7tg")

[node name="Button14" type="Button" parent="numButtParent"]
offset_left = 295.0
offset_top = 932.0
offset_right = 515.0
offset_bottom = 1152.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button14"]
position = Vector2(-255, -750)
stream = ExtResource("4_py7tg")

[node name="Button15" type="Button" parent="numButtParent"]
offset_left = 550.0
offset_top = 932.0
offset_right = 770.0
offset_bottom = 1152.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button15"]
position = Vector2(-510, -750)
stream = ExtResource("4_py7tg")

[node name="Button16" type="Button" parent="numButtParent"]
offset_left = 810.0
offset_top = 932.0
offset_right = 1030.0
offset_bottom = 1152.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_l4xjq")
icon = ExtResource("4_0ie3u")
expand_icon = true
script = ExtResource("2_62hmi")
metadata/_edit_use_anchors_ = true

[node name="PressSound" type="AudioStreamPlayer2D" parent="numButtParent/Button16"]
position = Vector2(-770, -750)
stream = ExtResource("4_py7tg")

[node name="LoseImage" type="TextureRect" parent="."]
visible = false
top_level = true
z_index = 1
offset_left = 1.0
offset_top = -102.0
offset_right = 1084.0
offset_bottom = 821.0
texture = ExtResource("12_fwlvl")
script = ExtResource("5_bxijw")

[node name="Goal" type="Label" parent="."]
offset_left = 1.0
offset_top = 60.0
offset_right = 1081.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("20_4o664")
theme_override_font_sizes/font_size = 72
text = "0
"
horizontal_alignment = 1
script = ExtResource("4_jv0bc")
metadata/_edit_use_anchors_ = true

[node name="goButton" type="Button" parent="."]
modulate = Color(0.565571, 1, 0.242806, 1)
offset_left = 660.0
offset_top = 1302.0
offset_right = 1020.0
offset_bottom = 1662.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_6s5vl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6edcu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qsfv2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2x11x")
icon = ExtResource("15_jqgni")
icon_alignment = 1
expand_icon = true
script = ExtResource("3_w3pql")
metadata/_edit_use_anchors_ = true

[node name="LoseTimer" type="Timer" parent="goButton"]
script = ExtResource("5_mtj0i")

[node name="image1" type="TextureRect" parent="goButton/LoseTimer"]
offset_left = 860.0
offset_top = 1217.0
offset_right = 1060.0
offset_bottom = 1242.0
texture = ExtResource("11_b58hh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="image2" type="TextureRect" parent="goButton/LoseTimer"]
offset_left = 650.0
offset_top = 1217.0
offset_right = 850.0
offset_bottom = 1242.0
texture = ExtResource("11_b58hh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="image3" type="TextureRect" parent="goButton/LoseTimer"]
offset_left = 440.0
offset_top = 1217.0
offset_right = 640.0
offset_bottom = 1242.0
texture = ExtResource("11_b58hh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="image4" type="TextureRect" parent="goButton/LoseTimer"]
offset_left = 230.0
offset_top = 1217.0
offset_right = 430.0
offset_bottom = 1242.0
texture = ExtResource("11_b58hh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="image5" type="TextureRect" parent="goButton/LoseTimer"]
anchors_preset = -1
anchor_right = 0.087037
anchor_bottom = 0.0427083
offset_left = 20.0
offset_top = 1217.0
offset_right = 126.0
offset_bottom = 1160.0
texture = ExtResource("11_b58hh")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="FailSound" type="AudioStreamPlayer2D" parent="goButton"]
position = Vector2(-659, -1242)
stream = ExtResource("13_pri83")

[node name="VictorySound" type="AudioStreamPlayer2D" parent="goButton"]
position = Vector2(-659, -1242)
stream = ExtResource("14_oeqo5")

[node name="HighScoreImage" type="TextureRect" parent="."]
offset_left = 420.0
offset_top = 1632.0
offset_right = 660.0
offset_bottom = 1872.0
texture = ExtResource("11_t2wo6")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="HighScore" type="Label" parent="HighScoreImage"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112333
anchor_top = 0.166833
anchor_right = 0.909333
anchor_bottom = 0.679833
offset_left = 0.0400028
offset_top = -0.0400009
offset_right = -0.0400085
offset_bottom = -0.0266647
theme_override_fonts/font = ExtResource("20_4o664")
theme_override_font_sizes/font_size = 40
text = "High Score
13"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StreakImage" type="TextureRect" parent="."]
show_behind_parent = true
offset_left = 60.0
offset_top = 1433.0
offset_right = 420.0
offset_bottom = 1593.0
texture = ExtResource("19_mg28s")
expand_mode = 1

[node name="Streak" type="Label" parent="StreakImage"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.130917
anchor_right = 1.0
anchor_bottom = 1.25625
offset_left = -2.0
offset_top = 0.0400143
offset_right = -0.999985
offset_bottom = 1.52588e-05
theme_override_fonts/font = ExtResource("20_4o664")
theme_override_font_sizes/font_size = 49
text = "Current Streak
0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true
